@@ -23,6 +23,7 @@ The following bugs are resolved with this release:
   [32245] glibc -Wstringop-overflow= build failure on hppa
   [32470] x86: Avoid integer truncation with large cache sizes
   [32810] Crash on x86-64 if XSAVEC disable via tunable
+  [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
 
 Version 2.40
 
